Refactor game lobby and top menu: update styles, remove legacy home button, and implement play bot functionality

--- a/index.html
+++ b/index.html
@@ -7,19 +7,12 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <!-- Top menu (relative) -->
+  <!-- Top menu -->
   <div id="top-menu">
     <div class="top-menu-left">
       <button id="back-button" class="icon-btn" title="Back" aria-label="Back">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
           <path d="M10 17l1.41-1.41L8.83 13H21v-2H8.83l2.58-2.59L10 7l-5 5 5 5z"/>
-        </svg>
-      </button>
-
-      <!-- ✅ New Home button -->
-      <button id="home-button" class="icon-btn" title="Home" aria-label="Home">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-          <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
         </svg>
       </button>
     </div>
@@ -49,7 +42,8 @@
   <!-- Lobby -->
   <div id="game-lobby-container" style="display:flex;">
     <h2>Dots & Boxes</h2>
-    <button id="start-game-button">Start Game</button>
+    <button id="play-game-button">Play Game</button>
+    <button id="play-bot-button">Play Bot</button>
     <p id="lobby-status"></p>
   </div>
 
